# GMath

./: CMakeLists.txt
include/: GMath.h  gmbuiltins.h
resources/GMath/: GMath.yyp
resources/GMath/extensions/GMath/: GMath.yy
src/: GMath.cpp
